# vxl

./: CMakeLists.txt  Makefile  README.md  package-lock.json
inc/: AudioService.hpp  Database.hpp  FileService.hpp  MediaLibrary.hpp  Metadata.hpp  MusicPlayerUI.hpp  PlaybackController.hpp  PlaylistManager.hpp  Song.hpp
source/: AudioService.cpp  Database.cpp  FileService.cpp  MetadataManager.cpp  MusicPlayerUI.cpp  PlaylistManager.cpp  main.cpp
